--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 2.6)
 get_filename_component(CURRENT_DIR ${CMAKE_CURRENT_LIST_FILE} PATH) # for cmake before 2.8.3
 
-project(hCloudClient C CXX ASM)
+project(robocore-sensors C CXX ASM)
 
 option(DEBUG "Enable debug informations" OFF)
 
