--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,3 +12,6 @@ include(${HFRAMEWORK_PATH}/hFramework.cmake)
 add_component_lib(sensors "${CURRENT_DIR}/../")
 
 add_hexecutable(lego_ultrasonic ../examples/lego_ultrasonic.cpp)
+add_hexecutable(lego_touch ../examples/lego_touch.cpp)
+add_hexecutable(lego_light ../examples/lego_light.cpp)
+add_hexecutable(hitechnic_accel ../examples/hitechnic_accel.cpp)
