reorganized structure, added Lego_Light class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,17 +18,14 @@ endif()
 include(${HFRAMEWORK_PATH}/robocore_common.cmake)
 
 include_directories("${CURRENT_DIR}/include/")
-
-message("${include_flags}")
-
-# set(ld_flags "-L${HFRAMEWORK_PATH}")
+include_directories("${CURRENT_DIR}/include/robotc/")
 
 set(CMAKE_CXX_FLAGS "${common_flags} -std=c++11")
 set(CMAKE_C_FLAGS "${common_flags} -std=c99")
-# SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "${ld_flags}")
-# SET(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "${ld_flags}")
 
 FILE(GLOB srcs "${CURRENT_DIR}/src/*.cpp")
+FILE(GLOB tmp "${CURRENT_DIR}/src/robotc/*.cpp")
+list(APPEND srcs ${tmp})
 
 if(NOT RELEASE)
 	add_library(sensorsd ${srcs})
