--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,8 @@ include(${HFRAMEWORK_PATH}/hFramework.cmake)
 add_component_src("${CURRENT_DIR}/../")
 
 add_hexecutable(hitechnic_accel ../examples/hitechnic_accel.cpp)
+add_hexecutable(hitechnic_gyro ../examples/hitechnic_gyro.cpp)
+add_hexecutable(hitechnic_compass ../examples/hitechnic_compass.cpp)
 add_hexecutable(lego_light ../examples/lego_light.cpp)
 add_hexecutable(lego_sound ../examples/lego_sound.cpp)
 
