fixed ultrasonic sensor classes

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,7 +9,11 @@ endif()
 
 include(${HFRAMEWORK_PATH}/hFramework.cmake)
 
-add_component_lib(sensors "${CURRENT_DIR}/../")
+if(DEVEL)
+	add_component_src("${CURRENT_DIR}/../")
+else()
+	add_component_lib(sensors "${CURRENT_DIR}/../")
+endif()
 
 add_hexecutable(hitechnic_accel ../examples/hitechnic_accel.cpp)
 add_hexecutable(hitechnic_gyro ../examples/hitechnic_gyro.cpp)
